--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <!-- movies -->
     <string name="fetching_movies">Fetching Movies</string>
     <string name="fetching_more_movies">Fetching More Movies</string>
+    <string name="search_movies">Search Movies</string>
 
     <!-- filter -->
     <string name="include_adult">Include Adult</string>
